juice-shop-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
    - name: "3000"
      port: 3000
