nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
  name: juice-shop-ingress
  namespace: juice-shop
spec:
  rules:
  - host: juiceshop-creativity.com
    http:
      paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: juice-shop
                  port:
                    number: 3000
